Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19301

CouchKVStore::rollback doesn't give error messages from couchstore in event of failure

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 3.1.5, 4.1.1, 4.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • No

    Description

      1
          errCode = couchstore_changes_count(db, 0, latestSeqno, &totSeqCount);
      2
          if (errCode != COUCHSTORE_SUCCESS) {
      3
              logger.log(EXTENSION_LOG_WARNING, "Failed to get changes count for "
      4
                         "rollback vBucket = %d, rev = %" PRIu64, vbid, fileRev);
      

      1
              errCode = couchstore_rewind_db_header(newdb);
      2
              if (errCode != COUCHSTORE_SUCCESS) {
      3
                  logger.log(EXTENSION_LOG_WARNING,
      4
                             "Failed to rewind Db pointer "
      5
                             "for couch file with vbid: %u, whose "
      6
                             "lastSeqno: %" PRIu64 ", while trying to roll back "
      7
                             "to seqNo: %" PRIu64,
      8
                             vbid, latestSeqno, rollbackSeqno);
      

      1
          errCode = couchstore_changes_count(db, info.last_sequence, latestSeqno,
      2
                                             &rollbackSeqCount);
      3
          if (errCode != COUCHSTORE_SUCCESS) {
      4
              logger.log(EXTENSION_LOG_WARNING, "Failed to get changes count for "
      5
                         "rollback vBucket = %d, rev = %" PRIu64, vbid, fileRev);
      

      Attachments

        For Gerrit Dashboard: MB-19301
        # Subject Branch Project Status CR V

        Activity

          People

            will.gardner Will Gardner (Inactive)
            will.gardner Will Gardner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty