MB-19301 Include error context in logging in CouchKVStore::rollback

This change ensures both the Couchstore error string and OS error
string is included in rollback logging.

Change-Id: I1a531565030b64d162bac5d818a4c23e83aaca6e
Reviewed-on: http://review.couchbase.org/63737
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>